adding CSRF-protection

--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -22,6 +22,8 @@
 
 <input type="hidden" name="id" value="{{course.id}}">
 
+ <input type="hidden" name="_csrf" value="{{csrf}}">
+
 
 <button type="submit" class="btn btn-primary">Редактировать</button>
 
@@ -29,6 +31,9 @@
 
 <form action="/course/remove" method="POST">
 <input type="hidden" name="id" value="{{ course.id }}">
+
+ <input type="hidden" name="_csrf" value="{{csrf}}">
+ 
  <button class="btn red"> Удалить курс</button>
 
 </form>
