--- a/views/add.hbs
+++ b/views/add.hbs
@@ -20,7 +20,8 @@
     <span class="helper-text" data-error="введите url картинки" ></span>
 </div>
 
-
+ <input type="hidden" name="_csrf" value="{{csrf}}">
+ 
 <button class="btn btn-primary">Добавить курс</button>
 
 </form>
