--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -21,6 +21,8 @@
                 <span class="helper-text" data-error="Введите пароль" ></span>
             </div>
 
+            <input type="hidden" name="_csrf" value="{{csrf}}">
+
 
             <button class="btn btn-primary" type="submit"> Войти</button>
 
@@ -51,7 +53,7 @@
                 <span class="helper-text" data-error="Введите имя" ></span>
             </div>
 
-
+             <input type="hidden" name="_csrf" value="{{csrf}}">
 
             <button class="btn btn-primary" type="submit"> Зарегистрироваться</button>
 
