--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -19,7 +19,10 @@
               <a href="/course/{{id}}/edit?allow=true">Редактиповать</a>
 
               <form action="/card/add" method="POST">
+              
                 <input type="hidden" name="id" value="{{id}}">
+
+                 <input type="hidden" name="_csrf" value="{{@root.csrf}}">
                 <button type="submit" class="btn btn-primary">Купить</button>
               </form>
           {{/if}}
